--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "#*": "./*.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "pg": "^8.14.1"
   },
